@@ -1,3 +1,11 @@
+2006-05-10  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (ppc64_elf_tls_optimize): Only optimize
+	R_PPC64_TPREL64 and R_PPC64_DTPMOD64 relocs when they are in
+	the .toc and referenced by a TLS code sequence.
+	(ppc64_elf_edit_toc): Cater for the unlikely situation that
+	.toc is the first section in a file.
+
 2006-05-03  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	PR binutils/2584
